# hfs-pilbox

./: .gitignore  CLAUDE.md  README.md  annotate_cli.py  app.py  boxer.py  ffmpret.py  pilbox.py  pyproject.toml  requirements.txt  vidbox.py
.github/workflows/: deploy_to_hf_space.yaml
assets/: 17078229_3222904-SAM2_tiny_ZeroGPU.json  example_0.json
tests/: test_boxer.py  test_ffmpret.py  test_pilbox.py  test_vidbox.py
