[project]
name = "hfs-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "gradio[mcp]>=5.38.0",
    "loguru>=0.7.3",
    "numpy>=2.2.6",
    "pillow>=11.3.0",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
